Fix hide sidebar button on mobile layout

--- a/app/components/areas/Sidebar/style.scss
+++ b/app/components/areas/Sidebar/style.scss
@@ -229,6 +229,7 @@
     display: none;
     line-height: 16px;
     width: 40px;
+    min-width: 40px;
     border-left: 1px solid $accent-color-4;
   }
 
